# hotmeal

./: .gitignore  AGENTS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  Cargo.toml  DESIGN_ARENA_BORROWED.md  DEVELOP.md  INTEGRATION_PLAN.md  Justfile  LICENSE-APACHE  PROTOTYPE_ARENA.rs  README.md  README.md.in  benchmark_results.txt  release-plz.toml
.config/captain/: config.styx
.config/captain/readme-templates/: readme-footer.md  readme-header.md
.github/workflows/: test.yml
.handoffs/: 2026-01-22-202636-fuzzing-fixes.md  2026-01-23-111604-qualname-facet-serialization.md  2026-01-23-144305-smallvec-paths.md
cinereus/: CHAWATHE_SEMANTICS.md  Cargo.toml  README.md  README.md.in
cinereus/src/: chawathe.rs  lib.rs  matching.rs  simplify.rs  tree.rs
hotmeal/: Cargo.toml  README.md  README.md.in
hotmeal-server/: CHANGELOG.md  Cargo.toml
hotmeal-server/src/: lib.rs
hotmeal-wasm/: .gitignore  Cargo.toml  README.md  README.md.in  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
hotmeal-wasm/src/: lib.rs
hotmeal-wasm/tests/: newline-debug.spec.ts  wasm.spec.ts
hotmeal/benches/: diffing.rs  full_cycle.rs  parsing.rs  serialization.rs
hotmeal/examples/: debug_diff.rs  parse_debug.rs  profile_xxl.rs  stem_stats.rs  test_fuzz1.rs
hotmeal/fuzz/: .envrc  .gitignore  Cargo.toml  Justfile  README.md  html.dict  seed_from_fixtures.py
hotmeal/fuzz/artifacts/roundtrip/: crash-522c0bccc2b9a09f39eec039b973c37e33435864  crash-f2f2477032b76185d52b548913aa5439ca85053d
hotmeal/fuzz/browser-bundle/: index.html
hotmeal/fuzz/browser-proto/: Cargo.toml
hotmeal/fuzz/browser-proto/src/: lib.rs
hotmeal/fuzz/browser-wasm/: Cargo.toml
hotmeal/fuzz/browser-wasm/src/: lib.rs
hotmeal/fuzz/fuzz_targets/: apply.rs  apply_parity.rs  apply_structured.rs  browser.rs  browser2.rs  mutate.rs  parse_parity.rs  roundtrip.rs
hotmeal/fuzz/fuzz_targets/common/: browser_worker.rs  dom_generator.rs  dom_node.rs  mod.rs  patch_trace.rs
hotmeal/fuzz/regressions/apply/: crash-09e0575dfaa1c9a2fe5d97fe3891e4a2a46846e2  crash-b061282d3aaaa3349a92be04f43dc8cdc26e8889
hotmeal/fuzz/src/: lib.rs
hotmeal/fuzz/tests/: browser_tests.rs  regressions.rs
hotmeal/fuzz/thrall/: Cargo.toml
hotmeal/fuzz/thrall/src/: lib.rs
hotmeal/src/: arena_dom.rs  diff.rs  dom.rs  lib.rs  parser.rs  serialize.rs  serializer.rs  shadow_tree_dump.rs  stem.rs  untyped_dom.rs
hotmeal/src/diff/: apply.rs  mod.rs  tracing_macros.rs  translate.rs  tree.rs
hotmeal/tests/: apply_tests.rs  fixtures_test.rs  parser_tests.rs  roundtrip.rs  test_debug_fuzzer_bug.rs
hotmeal/tests/fixtures/: xxl.html
hotmeal/tests/roundtrip-cases/: newline-in-text.html  opaque-content-changed.html  opaque-deeply-nested-change.html  opaque-multiple-siblings.html  opaque-structural-change.html  opaque-unchanged.html  opaque-with-sibling-changes.html  text-with-newlines.html
