[workspace]
members = [
    "cinereus",
    "hotmeal",
    "hotmeal-wasm",
]
exclude = [
    "hotmeal/fuzz",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/hotmeal"

[workspace.dependencies]
# Facet dependencies
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-testhelpers = { git = "https://github.com/facet-rs/facet", branch = "main" }

# Local crates
cinereus = { path = "cinereus", version = "0.42.0" }
hotmeal = { path = "hotmeal", version = "0.1.0" }

# Data structures
indextree = "4.7"

# HTML parsing
html5ever = "0.29"
tendril = "0.4"

# Other
tracing = { version = "0.1", default-features = false, features = ["std"] }
wasm-bindgen = "=0.2.106"
wasm-tracing = "2.1"
web-sys = "0.3"
datatest-stable = "0.3"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(facet_no_doc)"] }
