[workspace]
members = ["cinereus", "hotmeal", "hotmeal-server", "hotmeal-wasm"]
exclude = ["hotmeal/fuzz"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/hotmeal"

[workspace.dependencies]
# Facet dependencies
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-error = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-testhelpers = { git = "https://github.com/facet-rs/facet", branch = "main" }

# Local crates
cinereus = { path = "cinereus", version = "0.42.0" }
hotmeal = { path = "hotmeal", version = "0.1.0" }
hotmeal-server = { path = "hotmeal-server", version = "0.1.0" }

# Serialization
facet-postcard = { git = "https://github.com/facet-rs/facet", branch = "main" }

# RPC
roam = { git = "https://github.com/bearcove/roam", branch = "main" }
roam-session = { git = "https://github.com/bearcove/roam", branch = "main" }
roam-websocket = { git = "https://github.com/bearcove/roam", branch = "main" }

# Data structures
indextree = "4.7"
smallvec = "1"

# HTML parsing (from fasterthanlime fork - tracks upstream with hotmeal-specific patches)
html5ever = { git = "https://github.com/fasterthanlime/html5ever", branch = "hotmeal" }
markup5ever = { git = "https://github.com/fasterthanlime/html5ever", branch = "hotmeal" }
tendril = { git = "https://github.com/fasterthanlime/html5ever", branch = "hotmeal" }

# Other
js-sys = "0.3"
tracing = { version = "0.1", default-features = false, features = ["std"] }
wasm-bindgen = "=0.2.108"
wasm-tracing = "2.1"
web-sys = "0.3"
datatest-stable = "0.3"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(facet_no_doc)"] }

[workspace.metadata.cargo-shear]
ignored = ["facet-error"]
