[package]
name = "cinereus"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GumTree-style tree diffing with Chawathe edit script generation"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["tree", "diff", "gumtree", "chawathe", "edit-script"]
categories = ["algorithms", "data-structures"]

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
matching-stats = []
tracing = ["dep:tracing"]

[dependencies]
indextree = { workspace = true }
rapidhash = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tracing = { workspace = true }
facet = { workspace = true }
facet-testhelpers = { workspace = true }

[lints]
workspace = true
