[package]
name = "hotmeal-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Server-side live-reload infrastructure for hotmeal - transport-agnostic HTML diffing and patch delivery"
keywords = ["html", "live-reload", "diff", "patches", "hotmeal"]
categories = ["web-programming"]

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
hotmeal = { workspace = true }
facet = { workspace = true }
facet-postcard = { workspace = true }
tracing = { workspace = true, optional = true }

[features]
tracing = ["dep:tracing", "hotmeal/tracing"]

[dev-dependencies]
facet-json = { workspace = true }

[lints]
workspace = true
