[package]
name = "hotmeal-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WASM client for hotmeal - applies DOM patches in the browser"
keywords = ["html", "diff", "wasm", "dom", "patches"]
categories = ["wasm", "web-programming"]
repository = "https://github.com/bearcove/hotmeal"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hotmeal = { workspace = true }
facet-json = { workspace = true }
facet-postcard = { workspace = true }
hotmeal-server = { workspace = true }
js-sys = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
wasm-tracing = { workspace = true }
web-sys = { workspace = true, features = [
    "Attr",
    "BinaryType",
    "CloseEvent",
    "Comment",
    "console",
    "CustomEvent",
    "CustomEventInit",
    "Document",
    "DocumentFragment",
    "Element",
    "ErrorEvent",
    "EventTarget",
    "HtmlElement",
    "HtmlTemplateElement",
    "Location",
    "MessageEvent",
    "NamedNodeMap",
    "Node",
    "NodeList",
    "Text",
    "WebSocket",
    "Window",
] }
