[package]
name = "browser-wasm"
version = "1.0.0"
publish = false
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
browser-proto = { path = "../browser-proto" }
hotmeal-wasm = { path = "../../../hotmeal-wasm" }
vox-core = "0.6.0"
vox-websocket = "0.6.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Location",
  "UrlSearchParams",
  "DomParser",
  "SupportedType",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
] }
