[package]
name = "thrall"
version = "1.0.0"
publish = false
edition = "2024"
description = "Control browsers from Rust tests"

[dependencies]
tokio = { version = "1", features = ["full", "sync", "rt-multi-thread"] }
chromiumoxide = { version = "0.7", features = [
  "tokio-runtime",
  "_fetcher-rusttls-tokio",
], default-features = false }
tokio-tungstenite = "0.29"
futures-util = "0.3"
vox = "0.6.0"
vox-websocket = "0.6.0"
browser-proto = { path = "../browser-proto" }
libc = "0.2"
dirs-next = "2"
micro-http = "0.1"
